<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dimen_252_dip"
        android:layout_height="@dimen/dimen_155_dip"
        android:background="@drawable/background_circle_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dip"
            android:gravity="center_horizontal"
            android:text="@string/send_to"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/common_text_size18"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dip"
            android:layout_marginLeft="@dimen/dimen_20_dip"
            android:layout_marginRight="@dimen/dimen_20_dip"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/app_text_color2"
            android:textSize="@dimen/common_text_size16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_width"
            android:background="@color/app_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_47_dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_back"
                android:layout_width="@dimen/dimen_126_dip"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/app_text_color2"
                android:textSize="@dimen/common_text_size16"/>

            <View
                android:layout_width="@dimen/common_line_width"
                android:layout_height="match_parent"
                android:background="@color/app_line"/>

            <Button
                android:id="@+id/dialog_confirm"
                android:layout_width="@dimen/dimen_126_dip"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_selector_right"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/app_bottom_color_normal"
                android:textSize="@dimen/common_text_size16"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>