<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/business_card_background"
    >

    <com.xianglin.fellowvillager.app.widget.TopView
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dip"
        android:id="@+id/rela_unknow"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/common_padding_large"
        android:background="@drawable/setting_item_selector"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_small"
            android:gravity="left|center_vertical"
            android:text="@string/str_unopen"
            android:textColor="@color/app_text_color"
            android:layout_marginRight="@dimen/common_padding_small"
            android:id="@+id/tv_unknow"
            android:textSize="@dimen/common_text_size16"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dip"
        android:background="@drawable/setting_item_selector"
        android:id="@+id/rela_man"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_small"
            android:gravity="left|center_vertical"
            android:text="@string/str_man"
            android:textColor="@color/app_text_color"
            android:layout_marginRight="@dimen/common_padding_small"
            android:id="@+id/tv_man"
            android:textSize="@dimen/common_text_size16"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dip"
        android:background="@drawable/setting_item_selector"
        android:id="@+id/rela_woman"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_small"
            android:gravity="left|center_vertical"
            android:text="@string/str_woman"
            android:textColor="@color/app_text_color"
            android:layout_marginRight="@dimen/common_padding_small"
            android:id="@+id/tv_woman"
            android:textSize="@dimen/common_text_size16"/>
    </LinearLayout>

</LinearLayout>
